# ghdatamcp

./: README.md  install.bat  install.sh  pyproject.toml
ghdata_mcp/: __init__.py  _append_remaining.py  _verify.py  server.py
